--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -54,10 +54,10 @@ jobs:
         run: |-
           docker push "gcr.io/$PROJECT_ID/$IMAGE:$TAG"
 
-      - name: Set up Kustomize
-        run: |-
-          curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-          chmod u+x ./kustomize
+#      - name: Set up Kustomize
+#        run: |-
+#          curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
+#          chmod u+x ./kustomize
 
       - name: Install Gcloud Component
         run: |-
@@ -65,7 +65,7 @@ jobs:
 
       - name: Deploy Image to GKE cluster
         run: |-
-          ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$TAG
-          ./kustomize build . | kubectl apply -f -
+          kubectl apply -f service.yaml
+          kubectl apply -f deployment.yaml
           kubectl rollout restart deployment $DEPLOYMENT_NAME
           kubectl get services -o wide
